# basic-string

./: LICENSE  README.md  meson.build
examples/: ConcatString.c  HelloWorld.c  HelloWorldLength.c  StringCompare.c
inc/: Cstring.h  basicstring.h
src/: Cstring.c  basicstring.c  main.c
tests/: meson.build  test1.c  test2.c  test3.c  test4.c
