test1 = executable('test1', 'test1.c', include_directories : inc, link_with : staticlib)
test2 = executable('test2', 'test2.c', include_directories : inc, link_with : staticlib)
test3 = executable('test3', 'test3.c', include_directories : inc, link_with : staticlib)

test('Test 1', test1)
test('Test 2', test2)
test('Test 3', test3)