test1 = executable('test1', 'test1.c', include_directories: inc, link_with: dynamiclib)
test2 = executable('test2', 'test2.c', include_directories: inc, link_with: dynamiclib)
test3 = executable('test3', 'test3.c', include_directories: inc, link_with: dynamiclib)
test4 = executable('test4', 'test4.c', include_directories: inc, link_with: dynamiclib)

test('Test 1', test1)
test('Test 2', test2)
test('Test 3', test3)
test('Test 4', test4)
